test_suite/tests/ui/pass/arg_type.rs
use clapi::macros::*;

#[command]
#[arg(number)]
fn test(number: u32){}

fn main(){}