test_suite/tests/ui/fail/invalid_command_value/invalid_command_description.rs
use clapi::macros::*;

#[command(description=123)]
fn app(){}

fn main(){}